# stm32hello-zephyr

./: CMakeLists.txt  prj.conf  west.yml
boards/: nucleo_h503rb.overlay
boards/arm/nucleo_h503rb/: Kconfig.board  Kconfig.defconfig  board.cmake  nucleo_h503rb-common.dtsi  nucleo_h503rb.dts  nucleo_h503rb_defconfig
src/: main.c
zephyr/: module.yml
